# hphoton

./: .gitignore  .gitmodules  AlexAnalysis.hs  AnalyzeMany.hs  BayesBurstFind.hs  BayesBurstFindTest.hs  BurstFind2.hs  FitInterarrivals.hs  FretAnalysis.hs  README.mkd  Test.hs  build-sandbox.sh  burstfind.hs  default.nix  hphoton-meta.cabal  hphoton.cabal  plot.py  sources.txt
Documentation/: BurstFind-dot2tex-fig1.tex  BurstFind.tex  Makefile  burst-model.bib  burst-model.tex  model.tex
Graphics/Rendering/Chart/Simple/: Histogram.hs  Histogram.hs~
HPhoton/: BayesBurstFind.hs  BayesBurstFind2.hs  Bin.hs  FpgaTimetagger.hs  Fret.hs  RawTimestamps.hs  Region.hs  Timetag.hs  Types.hs  Utils.hs
HPhoton/BurstIdent/: Bayes.hs  BinThreshold.hs
HPhoton/FpgaTimetagger/: Alex.hs
HPhoton/Fret/: Alex.hs  Types.hs
hphoton/: BayesBurstFindTest.hs  LICENSE  Test.hs  hphoton.cabal
hphoton-correlate/: Correlate.hs  Test.hs  hphoton-correlate.cabal
hphoton-correlate/HPhoton/Corr/: PackedVec.hs  SparseCorr.hs
hphoton-correlate/doc/: Makefile  correlation.mkd
hphoton-correlate/tests/HPhoton/Corr/PackedVec/: Tests.hs
hphoton-correlate/tests/HPhoton/Corr/SparseCorr/: Tests.hs
hphoton-fpga-timetagger/: FretModel.hs  UnAlex.hs  hphoton-fpga-timetagger.cabal
hphoton-fpga-timetagger/HPhoton/: FpgaTimetagger.hs
hphoton-fpga-timetagger/HPhoton/FpgaTimetagger/: Alex.hs  Metadata.hs  Pipe.hs
hphoton-fpga-timetagger/HPhoton/FpgaTimetagger/Alex/: Test.hs
hphoton-fpga-timetagger/HPhoton/IO/: FpgaTimetagger.hs
hphoton-fpga-timetagger/HPhoton/IO/FpgaTimetagger/: Alex.hs  Metadata.hs  Pipe.hs  Pipes.hs
hphoton-fpga-timetagger/HPhoton/IO/FpgaTimetagger/Alex/: Test.hs
hphoton-io/: hphoton-io.cabal
hphoton-io/HPhoton/: IO.hs
hphoton-io/HPhoton/IO/: Metadata.hs  RawTimestamps.hs
hphoton-picoquant/: Deconvolve.hs  Export.hs  ExportHistogram.hs  Test.hs  hphoton-picoquant.cabal
hphoton-picoquant/HPhoton/IO/: Picoquant.hs
hphoton-picoquant/HPhoton/IO/Picoquant/: Interactive.hs  PT2.hs  PT3.hs  Types.hs
hphoton-tools/: AlexAnalysis.hs  AnalyzeMany.hs  BayesBurstFind.hs  Correlate.hs  DataSet.hs  FitInterarrivals.hs  FretAnalysis.hs  FretFit.hs  HtmlLog.hs  LearnIntensity.hs  LogStyle.hs  Moments.hs  PlotInterarrivals.hs  hphoton-tools.cabal
hphoton/Graphics/Rendering/Chart/Simple/: Histogram.hs
hphoton/HPhoton/: Bin.hs  Fret.hs  Region.hs  Types.hs  Unwrap.hs  Utils.hs
hphoton/HPhoton/BurstIdent/: Bayes.hs  Bayes2.hs  BinThreshold.hs
hphoton/HPhoton/Corr/: PackedVec.hs  SparseCorr.hs
hphoton/HPhoton/Fret/: Alex.hs  Generate.hs  Types.hs
hphoton/tests/HPhoton/BurstIdent/Bayes/: Tests.hs
hphoton/tests/HPhoton/Corr/PackedVec/: Tests.hs
hphoton/tests/HPhoton/Corr/SparseCorr/: Tests.hs
hphoton/tests/HPhoton/Utils/: Tests.hs
tests/HPhoton/BurstIdent/Bayes/: Tests.hs
tests/HPhoton/Utils/: Tests.hs
