Name:                hphoton
Version:             0.1
Synopsis:            Utilities for working with single-molecule photon trajectories
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Ben Gamari
Maintainer:          bgamari@physics.umass.edu
Category:            Math
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-Modules:   HPhoton.Bin,
                     HPhoton.Fret,
                     HPhoton.Fret.Types,
                     HPhoton.Fret.Alex,
                     HPhoton.FpgaTimetagger,
                     HPhoton.FpgaTimetagger.Alex,
                     HPhoton.BurstIdent.Bayes,
                     HPhoton.BurstIdent.BinThreshold
                     HPhoton.Types,
                     HPhoton.RawTimestamps,
                     Graphics.Rendering.Chart.Simple.Histogram

Executable bayes-burst-find
  Main-is:           BayesBurstFind.hs
  Build-depends:     base,
                     directory,
                     filepath,
                     ghc-prim,
                     vector-algorithms,
                     random-fu,
                     vector,
                     storable-endian,
                     mwc-random,
                     cmdargs,
                     bytestring,
                     transformers,
                     cereal,
                     vector-mmap,
                     statistics,
                     data-accessor,
                     Chart,
                     chart-histogram

Executable alex-analysis
  Main-is:           AlexAnalysis.hs
  Build-depends:     base,
                     directory,
                     filepath,
                     ghc-prim,
                     vector-algorithms,
                     random-fu,
                     vector,
                     storable-endian,
                     mwc-random,
                     cmdargs,
                     bytestring,
                     transformers,
                     cereal,
                     vector-mmap,
                     statistics,
                     data-accessor,
                     Chart,
                     chart-histogram

Executable fret-analysis
  Main-is:           FretAnalysis.hs
  Build-depends:     base,
                     directory,
                     filepath,
                     ghc-prim,
                     vector-algorithms,
                     random-fu,
                     vector,
                     storable-endian,
                     mwc-random,
                     cmdargs,
                     bytestring,
                     transformers,
                     cereal,
                     vector-mmap,
                     statistics,
                     data-accessor,
                     Chart,
                     chart-histogram
