name:                hphoton-io
version:             0.1.0.0
synopsis:            Convenient library for reading photon timestamp data
homepage:            http://github.com/bgamari/hphoton
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari.foss@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     HPhoton.IO.RawTimestamps
  build-depends:       base >=4.6 && <4.7, errors >=1.4 && <1.5, vector >=0.10 && <0.11, vector-mmap >=0.0 && <0.1, hphoton
  default-language:    Haskell2010
