name:                hphoton-io
version:             0.1.0.0
synopsis:            Convenient library for reading photon timestamp data
homepage:            http://github.com/bgamari/hphoton
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari.foss@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     HPhoton.IO.RawTimestamps, HPhoton.IO
  build-depends:       base >=4.6 && <4.7,
                       transformers >=0.3 && <1.0,
                       errors >=1.4 && <1.5,
                       vector >=0.10 && <0.11,
                       vector-mmap >=0.0 && <0.1,
                       time >=1.4 && <2.0,
                       hphoton,
                       hphoton-fpga-timetagger
  default-language:    Haskell2010
