name:                hphoton-picoquant
version:             0.1.0.0
synopsis:            Read Picoquant data
-- description:         
homepage:            http://github.com/bgamari/hphoton
license:             AGPL-3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari@physics.umass.edu
-- copyright:           
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     HPhoton.IO.Picoquant
                       HPhoton.IO.Picoquant.Types
                       HPhoton.IO.Picoquant.Interactive
                       HPhoton.IO.Picoquant.PT2
  other-extensions:    DeriveGeneric
                       DeriveDataTypeable
                       TemplateHaskell
  build-depends:       base >=4.6 && <4.8,
                       binary >=0.7 && <0.8,
                       bytestring >=0.10 && <0.11,
                       vector >=0.10 && <0.11,
                       lens >=3.9 && <5.0,
                       data-binary-ieee754
  default-language:    Haskell2010

executable picoquant-export-histogram
  main-is:             ExportHistogram.hs
  build-depends:       base >=4.6 && <4.8,
                       binary >=0.7 && <0.8,
                       bytestring >=0.10 && <0.11,
                       vector >=0.10 && <0.11,
                       lens >=3.9 && <5.0,
                       data-binary-ieee754,
                       optparse-applicative,
                       cassava >= 0.3
  default-language:    Haskell2010
  
