Name:                hphoton-tools
Version:             0.1
Synopsis:            Utilities for working with single-molecule photon trajectories
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Ben Gamari
Maintainer:          bgamari@physics.umass.edu
Category:            Math
Build-type:          Simple
Cabal-version:       >=1.2

Executable bayes-burst-find
  Main-is:           BayesBurstFind.hs
  Build-depends:     base,
                     hphoton,
                     directory,
                     filepath,
                     ghc-prim,
                     vector-algorithms,
                     random-fu,
                     vector,
                     storable-endian,
                     mwc-random,
                     cmdargs,
                     bytestring,
                     transformers,
                     cereal,
                     vector-mmap,
                     statistics,
                     data-accessor,
                     Chart,
                     chart-histogram,
                     hphoton,
                     hphoton-fpga-timetagger

Executable fret-analysis
  Main-is:           FretAnalysis.hs
  Ghc-options:       -rtsopts
  Build-depends:     base,
                     directory,
                     filepath,
                     ghc-prim,
                     vector-algorithms,
                     random-fu,
                     vector,
                     storable-endian,
                     mwc-random,
                     cmdargs,
                     bytestring,
                     transformers,
                     cereal,
                     vector-mmap,
                     statistics,
                     data-accessor,
                     Chart,
                     chart-histogram,
                     mixture-model,
                     hphoton,
                     hphoton-fpga-timetagger

Executable fit-interarrivals
  Main-is:           FitInterarrivals.hs
  Ghc-options:       -rtsopts -threaded
  Build-depends:     base,
                     directory,
                     filepath,
                     ghc-prim,
                     vector-algorithms,
                     random-fu,
                     vector,
                     storable-endian,
                     mwc-random,
                     cmdargs,
                     bytestring,
                     transformers,
                     cereal,
                     vector-mmap,
                     statistics,
                     logfloat,
                     mixture-model,
                     parallel-io,
                     hphoton,
                     hphoton-fpga-timetagger

Executable plot-interarrivals
  Main-is:           PlotInterarrivals.hs
  Ghc-options:       -rtsopts -threaded
  Build-depends:     base,
                     directory,
                     hphoton,
                     filepath,
                     ghc-prim,
                     vector-algorithms,
                     random-fu,
                     vector,
                     storable-endian,
                     mwc-random,
                     cmdargs,
                     bytestring,
                     transformers,
                     cereal,
                     vector-mmap,
                     statistics,
                     data-accessor,
                     Chart,
                     chart-histogram,
                     colour,
                     logfloat,
                     mixture-model,
                     hphoton,
                     hphoton-fpga-timetagger

Executable learn-intensity
  Main-is:           LearnIntensity.hs
  Ghc-options:       -rtsopts -threaded
  Build-depends:     base,
                     directory,
                     hphoton,
                     filepath,
                     ghc-prim,
                     vector-algorithms,
                     random-fu,
                     vector,
                     storable-endian,
                     mwc-random,
                     cmdargs,
                     bytestring,
                     transformers,
                     cereal,
                     vector-mmap,
                     statistics,
                     data-accessor,
                     Chart,
                     chart-histogram,
                     logfloat,
                     mixture-model,
                     hphoton,
                     hphoton-fpga-timetagger

Executable analyze-many
  Main-is:           AnalyzeMany.hs
  Ghc-options:       -rtsopts -threaded
  Build-depends:     base,
                     directory,
                     hphoton,
                     filepath,
                     aeson,
                     process,
                     parallel-io

