Name:                hphoton-tools
Version:             0.1
Synopsis:            Utilities for working with single-molecule photon trajectories
-- Description:
License:             BSD3
License-file:        LICENSE
Author:              Ben Gamari
Maintainer:          bgamari@physics.umass.edu
Category:            Math
Build-type:          Simple
Cabal-version:       >=1.2

Executable bayes-burst-find
  Main-is:           BayesBurstFind.hs
  Build-depends:     base,
                     hphoton,
                     directory,
                     filepath,
                     ghc-prim,
                     vector-algorithms,
                     random-fu,
                     vector,
                     storable-endian,
                     mwc-random,
                     optparse-applicative,
                     bytestring,
                     transformers,
                     cereal,
                     vector-mmap,
                     statistics,
                     lens,
                     Chart >=1.0,
                     chart-histogram,
                     hphoton,
                     hphoton-fpga-timetagger

Executable fret-analysis
  Main-is:           FretAnalysis.hs
  Ghc-options:       -rtsopts
  Build-depends:     base,
                     directory,
                     filepath,
                     ghc-prim,
                     vector-algorithms,
                     random-fu,
                     vector,
                     lens,
                     pipes,
                     pipes-vector >= 0.3,
                     pipes-bytestring,
                     storable-endian,
                     mwc-random,
                     optparse-applicative,
                     bytestring,
                     transformers,
                     cereal,
                     vector-mmap,
                     blaze-html,
                     blaze-markup,
                     clay,
                     statistics,
                     data-accessor,
                     Chart >=1.0,
                     chart-histogram,
                     mixture-model,
                     hphoton,
                     hphoton-fpga-timetagger

Executable alex-analysis
  Main-is:           AlexAnalysis.hs
  Ghc-options:       -rtsopts
  Build-depends:     base,
                     directory,
                     filepath,
                     primitive,
                     vector,
                     math-functions,
                     lens,
                     pipes,
                     pipes-vector >= 0.3,
                     pipes-bytestring,
                     blaze-html,
                     blaze-markup,
                     clay,
                     optparse-applicative,
                     transformers,
                     mtl,
                     statistics,
                     data-accessor,
                     Chart >=1.0,
                     chart-histogram,
                     mixture-model,
                     hphoton,
                     hphoton-fpga-timetagger

Executable fit-interarrivals
  Main-is:           FitInterarrivals.hs
  Ghc-options:       -rtsopts -threaded
  Build-depends:     base,
                     directory,
                     filepath,
                     ghc-prim,
                     vector-algorithms,
                     random-fu,
                     vector,
                     storable-endian,
                     mwc-random,
                     optparse-applicative,
                     data-default,
                     bytestring,
                     transformers,
                     cereal,
                     vector-mmap,
                     statistics,
                     log-domain,
                     mixture-model,
                     parallel-io,
                     hphoton,
                     hphoton-fpga-timetagger

Executable plot-interarrivals
  Main-is:           PlotInterarrivals.hs
  Ghc-options:       -rtsopts -threaded
  Build-depends:     base,
                     directory,
                     hphoton,
                     filepath,
                     ghc-prim,
                     vector-algorithms,
                     random-fu,
                     vector,
                     storable-endian,
                     mwc-random,
                     bytestring,
                     transformers,
                     cereal,
                     vector-mmap,
                     statistics,
                     lens,
                     Chart >=1.0,
                     Chart-cairo,
                     chart-histogram,
                     colour,
                     log-domain,
                     mixture-model,
                     hphoton,
                     hphoton-fpga-timetagger

Executable learn-intensity
  Main-is:           LearnIntensity.hs
  Ghc-options:       -rtsopts -threaded
  Build-depends:     base,
                     directory,
                     hphoton,
                     filepath,
                     ghc-prim,
                     vector-algorithms,
                     random-fu,
                     vector,
                     storable-endian,
                     mwc-random,
                     bytestring,
                     transformers,
                     cereal,
                     vector-mmap,
                     statistics,
                     statistics-linreg,
                     data-accessor,
                     Chart >=1.0,
                     chart-histogram,
                     log-domain,
                     mixture-model,
                     hphoton,
                     hphoton-fpga-timetagger

Executable analyze-many
  Main-is:           AnalyzeMany.hs
  Other-Modules:     DataSet
  Ghc-options:       -rtsopts -threaded
  Build-depends:     base,
                     directory,
                     hphoton,
                     filepath,
                     aeson,
                     process,
                     parallel-io
