Name:                hphoton
Version:             0.1
Synopsis:            Utilities for working with single-molecule photon trajectories
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Ben Gamari
Maintainer:          bgamari@physics.umass.edu
Category:            Math
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-Modules:   HPhoton.Bin,
                     HPhoton.Bin.Plot,
                     HPhoton.Fret,
                     HPhoton.Fret.Types,
                     HPhoton.Fret.Alex,
                     HPhoton.Fret.Generate,
                     HPhoton.BurstIdent.Bayes,
                     HPhoton.BurstIdent.BinThreshold
                     HPhoton.Types,
                     HPhoton.Unwrap,
                     HPhoton.Utils

  Build-depends:     base,
                     directory,
                     filepath,
                     ghc-prim,
                     text,
                     vector-algorithms,
                     random-fu,
                     vector,
                     deepseq,
                     storable-endian,
                     mwc-random,
                     bytestring,
                     transformers,
                     binary,
                     vector-mmap,
                     statistics,
                     Chart >=1.4,
                     Chart-cairo >=1.0,
                     data-default,
                     colour,
                     QuickCheck,
                     lens

test-suite Main
  Hs-source-dirs:    .,tests
  Main-is:           Test.hs
  Type:              exitcode-stdio-1.0
  Build-depends:     base,
                     directory,
                     filepath,
                     ghc-prim,
                     vector-algorithms,
                     random-fu,
                     vector,
                     storable-endian,
                     mwc-random,
                     bytestring,
                     transformers,
                     statistics,
                     Chart >=1.0,
                     QuickCheck,
                     test-framework,
                     test-framework-quickcheck2,
                     test-framework-hunit,
                     HUnit
		     
